fix: engagement map display bug on mobiles

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/templates/front/front.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/templates/front/front.scss
@@ -30,7 +30,9 @@
   }
 
   &__article {
-    height: 100%;
+		@include media($_DESKTOP){
+			height: 100%;
+		}
 
     &--2-col {
       grid-column: 1 / 3;
